# insider-threat-lstm

./: GITHUB_FILES_STRUCTURE.md  README.md  TRANSFER_TO_GITHUB.md  alert_manager.py  app.py  cert_dataset.py  cim_transformer.py  data_processor.py  dependencies.txt  lstm_model.py  models.py  pyproject.toml  replit.md  run.py  splunk_backend.py  startup.sh  upload_to_github.sh
attached_assets/: Pasted-Tech-Stack-Tools-Utilize-Search-Processing-Language-SPL-to-preprocess-transform-and-analyze-1752129828403_1752129828405.txt
data/: alerts.db
data/cert_dataset/: email.csv
default/: app.conf  inputs.conf  props.conf  transforms.conf
lookups/: threat_indicators.csv
static/css/: style.css
static/js/: dashboard.js  model_training.js
templates/: alerts.html  dashboard.html  index.html  model_training.html
