[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dash>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.1",
    "joblib>=1.5.1",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.3",
    "numpy==1.26.4",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "tensorflow>=2.18.1",
    "trafilatura>=2.0.0",
    "urllib3>=2.5.0",
    "werkzeug>=3.1.3",
    "psycopg2-binary>=2.9.10",
    "defusedxml>=0.7.1",
]
